--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
-    ignore:
+    allow:
       - dependency-name: "*"
-        dependency-type: "development"
+        dependency-type: "production"
